# yuri

./: .gitignore  .gitmodules  README-ZH.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.vue  auto-imports.d.ts  base.css  components.d.ts  main.ts  vuetify.ts
src-tauri/: Cargo.toml  tauri.conf.build.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/static/: index.html
src-tauri/src/static/assets/: 404-lIgvOYmt.js  _...all_-CV_n1OKz.js  _...all_-CrVogV4Y.js  _...all_-CvXVJauc.js  _...all_-D6RLwNC_.js  _...all_-Dkq9GGMI.js  _path_-BII6H2m9.js  _path_-BRQtfhBG.js  _path_-BvYT_EGX.js  _path_-C-15zolB.js  _path_-CkqFXQVG.js  _path_-Cou2260A.js  _path_-DlWKzbhd.js  _path_-DxN60sdK.js  _path_-jVYHrk9t.js  _path_-jvDAE959.js  index-ASgWQcFS.css  index-B5zRwVpF.js  index-BOCf6Vpa.js  index-BXj2hsl3.js  index-CRsouqqJ.css  index-CZIvRjYC.js  index-G-gC2CPP.js  index-_m8IKCxO.css
src/components/: Empty.vue  NavBar.vue
src/locales/: en-US.yaml  zh-CN.yaml
src/pages/: about.vue  index.vue  setting.vue
src/presets/lara/: index.js
src/stores/: useConfigStore.ts  useDirectoryStore.ts  useUpdateStore.ts
