[package]
name = "yuri"
version = "0.1.0"
authors = ["hanaTsuk1"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static-web-server = { version = "2.28.0", features = ["directory-listing"] }
port_check = "0.1.5"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-store = "2.0.0-beta.0"
local-ip-address = "0.5.7"
once_cell = "1.19.0"
tokio = "1.36.0"
tauri-plugin-shell = "2.0.0-beta.0"
tauri-plugin-fs = "2.0.0-beta.0"
tauri-plugin-single-instance = "2.0.0-beta.0"
tauri-plugin-process = "2.0.0-beta.1"
warp = "0.3.6"
static_dir = "0.2.0"
nanoid = "0.4.0"
sys-locale = "0.3.1"
tokio-util = "0.7.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.1"
